# Metodos_Numericos

./: CMakeLists.txt
diferenciacion/: data.txt  derivadas.txt  diferenciacion.c  diferenciacionTabla.c  ejercicio1- diferenciacionTabla.c
ecuaciones_diferenciales/: coef.txt  derivadas.txt  euler.c  mejorasEuler.c  resultadosEuler.txt  resultadosEulerSistEDOs.txt  resultadosHeun.txt  resultadosPM.txt  resultadosRK4.txt  resultadosRK4SistEDOs.txt  sistemaEDOs.c
examenes/: data.txt  ejercicio1 - codigoAux.c  ejercicio1- a) tabla.txt  function.c  productXValue.c  tabla.txt
integracion/: data.txt  gaussLegendre.c  newtonCotes.c  newtonCotesTabla.c
interpolacion/: InterpolacionSplines.cpp  data.txt  interpolacion.c  interpolacionSegmentaria.c
localizacion_raices/: localizacionRaices.c
regresion/: data.txt  regresion.c
sistemas_ecuaciones_lineales/: data.txt  eliminacionGaussiana.c  iterativos.c  jacobi.c
