cmake_minimum_required(VERSION 3.20)
project(Metodos_Numericos)

set(CMAKE_C_STANDARD 11)

add_executable(localizacion_raices  localizacion_raices/localizacionRaices.c)
add_executable(eliminacion_gaussiana sistemas_ecuaciones_lineales/eliminacionGaussiana.c integracion/newtonCotes.c)
add_executable(iterativos sistemas_ecuaciones_lineales/iterativos.c)
add_executable(interpolacion interpolacion/interpolacion.c)
add_executable(interpolacion_segmentaria interpolacion/interpolacionSegmentaria.c)
add_executable(regresion regresion/regresion.c)
add_executable(integracion integracion/newtonCotes.c)
add_executable(integracionGauss integracion/gaussLegendre.c)
add_executable(diferenciacion diferenciacion/diferenciacion.c)

target_link_libraries(interpolacion m)
target_link_libraries(regresion m)
target_link_libraries(interpolacion_segmentaria m)
target_link_libraries(iterativos m)
target_link_libraries(localizacion_raices  m)
target_link_libraries(eliminacion_gaussiana m)
target_link_libraries(integracion m)
target_link_libraries(integracionGauss m)
target_link_libraries(diferenciacion m)

