cmake_minimum_required(VERSION 3.20)
project(Metodos_Numericos)

set(CMAKE_C_STANDARD 11)

add_executable(localizacion_raices  localizacion_raices/localizacionRaices.c)
add_executable(eliminacion_gaussiana sistemas_ecuaciones_lineales/eliminacionGaussiana.c)
add_executable(iterativos sistemas_ecuaciones_lineales/iterativos.c)
add_executable(interpolacion interpolacion/interpolacion.c)
add_executable(interpolacion_segmentaria interpolacion/interpolacionSegmentaria.c)
add_executable(interpolacion_parisi interpolacion/InterpolacionSplines.cpp)
add_executable(interpolacion_parisi_lec interpolacion/lectura_escritura_datos.cpp)
add_executable(regresion regresion/regresion.c)
add_executable(integracionCotes integracion/newtonCotes.c)
add_executable(integracionCotesTabla integracion/newtonCotesTabla.c)
add_executable(integracionGauss integracion/gaussLegendre.c)
add_executable(diferenciacion diferenciacion/diferenciacion.c)
add_executable(diferenciacionTabla diferenciacion/diferenciacionTabla.c)
add_executable(EDOEuler ecuaciones_diferenciales/euler.c)
add_executable(EDOOtros ecuaciones_diferenciales/mejorasEuler.c)
add_executable(SistemaEDOs ecuaciones_diferenciales/sistemaEDOs.c)
add_executable(calculaFuncion examenes/function.c)
add_executable(ProductoValorX examenes/productXValue.c)


target_link_libraries(interpolacion m)
target_link_libraries(regresion m)
target_link_libraries(interpolacion_segmentaria m)
target_link_libraries(iterativos m)
target_link_libraries(localizacion_raices  m)
target_link_libraries(eliminacion_gaussiana m)
target_link_libraries(integracionCotes m)
target_link_libraries(integracionGauss m)
target_link_libraries(diferenciacion m)
target_link_libraries(diferenciacionTabla m)
target_link_libraries(EDOEuler m)
target_link_libraries(EDOOtros m)
target_link_libraries(SistemaEDOs m)
target_link_libraries(calculaFuncion m)
target_link_libraries(ProductoValorX m)

